--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,3 +1,6 @@
+@import './styles/_home.scss';
+@import './styles/_buttonPaint.scss';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
