--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,5 +1,9 @@
 @import './styles/_home.scss';
 @import './styles/_buttonPaint.scss';
+@import './styles/_projects.scss';
+@import './styles/_navLink.scss';
+@import './styles/_boxText.scss';
+@import './styles/_caroussel.scss';
 
 body {
   margin: 0;
