--- a/frontend/src/styles/_home.scss
+++ b/frontend/src/styles/_home.scss
@@ -1,38 +1,36 @@
+/* Styles pour l'élément racine App */
 .App {
+  min-height: 100vh; /* Hauteur minimale de 100% de la vue (viewport) */
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Centre horizontalement */
+}
+
+/* Styles pour la barre de navigation */
+.nav-bar {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 0;
   text-align: center;
-}
+  width: 100%;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .custom-button {
+    margin-left: 100px;
+    margin-right: 100px; /* Ajuster l'espacement horizontal */
   }
+
 }
 
+/* Styles pour le logo */
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex: 1; /* Remplit l'espace restant */
 }
 
-.App-link {
-  color: #61dafb;
-}
+.testo {
+  width: 600px; /* Ajustez la taille du logo selon vos besoins */
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
