--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -4,6 +4,9 @@
 @import './styles/_navLink.scss';
 @import './styles/_boxText.scss';
 @import './styles/_caroussel.scss';
+@import './styles/_pouet.scss';
+
+
 
 body {
   margin: 0;
@@ -18,3 +21,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
