--- a/frontend/src/styles/_buttonPaint.scss
+++ b/frontend/src/styles/_buttonPaint.scss
@@ -1,4 +1,5 @@
-/* Dans le fichier CSS Button.css */
+@import './_pouet.scss';
+
 .custom-button {
     background: none;
     border: none;
@@ -18,9 +19,22 @@
   }
   
   .button-label {
-    color: #fff; /* Couleur du texte */
-    position: absolute; /* Positionnement absolu pour superposer */
-    top: 50%; /* Déplacer le texte à mi-hauteur verticalement */
-    left: 50%; /* Déplacer le texte à mi-largeur horizontalement */
-    transform: translate(-50%, -50%); /* Centrage absolu */
+    font-size: 29px;
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    -webkit-text-fill-color: transparent; 
+    -webkit-text-stroke: 1px black; 
+}
+  .gradient-text {
+    display: inline-block; // Assurez-vous que l'élément prend la largeur du texte
+    // Appliquez le gradient de couleur au texte
+    background: $text-gradient;
+    background-clip: text;
+    color: transparent;
+    
+  
+    // Définissez la police ici
+    font-family: $jolly-lodger;
   }
