--- a/frontend/src/styles/_boxText.scss
+++ b/frontend/src/styles/_boxText.scss
@@ -3,12 +3,60 @@
 
 
 .text-box-frame {
+    
+    background-color: #333;
     color : $font-color-main;
-    background-color: $primary-color; /* Couleur de fond */
-    border: 2px solid #333; /* Bordure de 2px avec couleur #333 */
+    
+    
     border-radius: 25px; /* Rayon de bordure de 25px */
-    padding: 20px; /* Espacement intérieur */
-    width: fit-content; /* Ajuste la largeur en fonction du contenu */
+    padding: 5px; /* Espacement intérieur */
     margin: 20px auto; /* Centre horizontalement avec 20px de marge verticale */
-    text-align: center; /* Centrer le texte */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    object-fit: cover;
+
+    
+
+    img {
+      max-width: 100%;
+      height: 100%;
+      border-radius: 20px; /* Rayon de bordure de 25px */
+
+    }
+
+
+  }
+
+  .large {
+    width: 500px;
+    background: rgb(245,249,135);
+    background: linear-gradient(90deg, rgba(245,249,135,1) 33%, rgba(231,156,12,1) 76%);
+    
+
+  }
+
+  .medium {
+    width: 300px;
+    height: 200px;
+    
+    border: 5px solid  rgba(245,249,135,1); /* Bordure de 2px avec couleur #333 */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+
+  }
+
+  .small {
+    width: 300px;
+    border: 5px solid rgba(231,156,12,1); /* Bordure de 2px avec couleur #333 */
+
+  }
+
+  .centeredContent {
+
+    
+
   }
