--- a/frontend/src/styles/_caroussel.scss
+++ b/frontend/src/styles/_caroussel.scss
@@ -7,6 +7,8 @@
     justify-content: center;
     margin-top: 50px;
     margin-bottom : 50px;
+    background-color: aqua;
+    height : 150px;
   }
   
   .carousel {
@@ -34,6 +36,8 @@
   
   .carousel-image {
     max-width: 100%;
+    height: 45px;
+    
   }
   
   .image-position {
