--- a/frontend/src/styles/_home.scss
+++ b/frontend/src/styles/_home.scss
@@ -4,6 +4,10 @@
   display: flex;
   flex-direction: column;
   align-items: center; /* Centre horizontalement */
+  background-image: url('../assets/whiteWall.jpg'); /* Utilisez l'image comme arrière-plan */
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center center; /* Centrez l'arrière-plan */
 }
 
 /* Styles pour la barre de navigation */
