--- a/frontend/src/styles/_skills.scss
+++ b/frontend/src/styles/_skills.scss
@@ -10,7 +10,8 @@
 }
 
 .sectionLogo {
-
+    display: flex;
+    flex-direction: column;
     margin-top: 50px ;
     margin-bottom: 50px;
 
@@ -20,7 +21,9 @@
 
     display: flex;
     flex-direction: inline;
-    justify-content: space-evenly;
+   justify-content: space-evenly;
+   flex-wrap: wrap;
+   
 
    
 
