Update 28/08 - Re-work Styles

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -5,6 +5,8 @@
 @import './styles/_boxText.scss';
 @import './styles/_caroussel.scss';
 @import './styles/_pouet.scss';
+@import './styles/_dropdown.scss';
+
 
 
 
