--- a/frontend/src/styles/_boxText.scss
+++ b/frontend/src/styles/_boxText.scss
@@ -38,19 +38,24 @@
   }
 
   .medium {
-    width: 300px;
+  
     height: 200px;
     
     border: 5px solid  rgba(245,249,135,1); /* Bordure de 2px avec couleur #333 */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
+
+  
 
   }
 
   .small {
     width: 300px;
     border: 5px solid rgba(231,156,12,1); /* Bordure de 2px avec couleur #333 */
+
+  }
+
+  .tiny {
+
+    background: rgb(239,160,194);
+    background: linear-gradient(90deg, rgba(239,160,194,1) 10%, rgba(199,128,188,1) 29%, rgba(177,85,193,1) 81%, rgba(121,175,219,1) 95%);
 
   }
