--- a/frontend/src/styles/_buttonPaint.scss
+++ b/frontend/src/styles/_buttonPaint.scss
@@ -33,4 +33,19 @@
     background-clip: text;
     color: transparent;
     font-family: $jolly-lodger;
+    margin-left: auto;
+    margin-right: auto;
   }
+
+ .styledText {
+
+  font-size: 50px;
+   display: inline-block;
+    color: transparent;
+    font-family: $jolly-lodger;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: 1px black;
+    text-align: center
+   
+
+ }
