--- a/frontend/src/styles/_pouet.scss
+++ b/frontend/src/styles/_pouet.scss
@@ -4,7 +4,7 @@ $jolly-lodger: 'Jolly Lodger', sans-serif;
 $font-color-main: linear-gradient(90deg, rgba(245,249,135,1) 33%, rgba(231,156,12,1) 76%);
 
 .backgroundWall {
-
+    min-height: 100vh;
     background-image: url('../assets/whiteWall.jpg'); /* Utilisez l'image comme arrière-plan */
     background-size: 100%;
     background-repeat: no-repeat;
