Update - final bugs + CSS

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -6,6 +6,7 @@
 @import './styles/_caroussel.scss';
 @import './styles/_pouet.scss';
 @import './styles/_dropdown.scss';
+@import './styles/_footer.scss';
 
 
 
@@ -24,5 +25,9 @@ code {
     monospace;
 }
 
+.testVH {
 
+ 
+
+}
 
