--- a/frontend/src/styles/_boxText.scss
+++ b/frontend/src/styles/_boxText.scss
@@ -5,9 +5,7 @@
 .text-box-frame {
     
     background-color: #333;
-    color : $font-color-main;
-    
-    
+
     border-radius: 25px; /* Rayon de bordure de 25px */
     padding: 5px; /* Espacement intérieur */
     margin: 20px auto; /* Centre horizontalement avec 20px de marge verticale */
@@ -15,13 +13,12 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    object-fit: cover;
-
-    
+    object-fit: contain;
 
     img {
       max-width: 100%;
       height: 100%;
+     
       border-radius: 20px; /* Rayon de bordure de 25px */
 
     }
@@ -33,29 +30,24 @@
     width: 500px;
     background: rgb(245,249,135);
     background: linear-gradient(90deg, rgba(245,249,135,1) 33%, rgba(231,156,12,1) 76%);
-    
-
   }
 
   .medium {
-  
-    height: 200px;
     
+    height: 200px;
     border: 5px solid  rgba(245,249,135,1); /* Bordure de 2px avec couleur #333 */
-
-  
-
+    background: #dec0eb
   }
 
   .small {
+    font-family: 'Acme';
     width: 300px;
     border: 5px solid rgba(231,156,12,1); /* Bordure de 2px avec couleur #333 */
-
+    background: #dec0eb
   }
 
   .tiny {
-
     background: rgb(239,160,194);
     background: linear-gradient(90deg, rgba(239,160,194,1) 10%, rgba(199,128,188,1) 29%, rgba(177,85,193,1) 81%, rgba(121,175,219,1) 95%);
-
+    padding: 20px 20px 20px 20px;
   }
