--- a/frontend/src/styles/_pouet.scss
+++ b/frontend/src/styles/_pouet.scss
@@ -3,11 +3,26 @@ $text-gradient: linear-gradient(90deg, rgba(245, 249, 135, 1) 33%, rgba(231, 156
 $jolly-lodger: 'Jolly Lodger', sans-serif;
 $font-color-main: linear-gradient(90deg, rgba(245,249,135,1) 33%, rgba(231,156,12,1) 76%);
 
-.backgroundWall {
-    min-height: 100vh;
-    background-image: url('../assets/whiteWall.jpg'); /* Utilisez l'image comme arrière-plan */
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: center center; /* Centrez l'arrière-plan */
 
+.html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+.backgroundWall {
+ 
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    position: relative;
+    background-image: url('../assets/whiteWall.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+  
+}
+
+.blank {
+
+  height: 100px;
 }
