--- a/frontend/src/styles/_projects.scss
+++ b/frontend/src/styles/_projects.scss
@@ -9,11 +9,8 @@
 }
 
 .infos {
-    
     display: flex;
-    justify-content: space-around; /* Espace équitable entre les éléments */
-
-   
+    justify-content: space-around; /* Espace équitable entre les éléments */ 
   }
 
   .box2 {
@@ -21,14 +18,17 @@
     justify-content: space-between;
     margin: 0px auto; /* Centre horizontalement avec 20px de marge verticale */
     text-align: center; /* Centrer le texte */
-    color: aqua;
-   
-  
+    display: inline-block;
+    font-family: 'Acme';
 }
 
 .centredTitle {
-
   font-family: $jolly-lodger;
   font-size: 25px;
+}
 
+.centered-link {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px; /* Ajustez la marge selon vos besoins */
 }
