--- a/frontend/src/styles/_navLink.scss
+++ b/frontend/src/styles/_navLink.scss
@@ -1,4 +1,4 @@
-/* Dans le fichier CSS NavLink.css */
+
 .nav-link {
   
     justify-content: center;
@@ -11,6 +11,6 @@
     border: none;
     cursor: pointer;
     font-size: 16px;
-    margin: 0 10px; /* Espacement entre les boutons */
+    margin: 0 10px; 
     padding: 5px 10px;
   }
