--- a/frontend/src/styles/_boxText.scss
+++ b/frontend/src/styles/_boxText.scss
@@ -1,4 +1,3 @@
-/* Dans le fichier CSS TextBoxFrame.css */
 @import './_pouet.scss';
 
 
@@ -6,9 +5,9 @@
     
     background-color: #333;
 
-    border-radius: 25px; /* Rayon de bordure de 25px */
-    padding: 5px; /* Espacement intérieur */
-    margin: 20px auto; /* Centre horizontalement avec 20px de marge verticale */
+    border-radius: 25px; 
+    padding: 5px; 
+    margin: 20px auto; 
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,7 +18,7 @@
       max-width: 100%;
       height: 100%;
      
-      border-radius: 20px; /* Rayon de bordure de 25px */
+      border-radius: 20px; 
 
     }
 
@@ -28,6 +27,7 @@
 
   .large {
     width: 500px;
+   
     background: rgb(245,249,135);
     background: linear-gradient(90deg, rgba(245,249,135,1) 33%, rgba(231,156,12,1) 76%);
   }
@@ -35,19 +35,37 @@
   .medium {
     
     height: 200px;
-    border: 5px solid  rgba(245,249,135,1); /* Bordure de 2px avec couleur #333 */
-    background: #dec0eb
+    border: 5px solid  rgba(245,249,135,1);
+    background: #ffffff;
+    color: #932A93
   }
 
   .small {
     font-family: 'Acme';
-    width: 300px;
-    border: 5px solid rgba(231,156,12,1); /* Bordure de 2px avec couleur #333 */
-    background: #dec0eb
+    height: 450px;
+    border: 5px solid rgba(231,156,12,1); 
+    background: #ffffff;
+    color: #932A93
   }
 
   .tiny {
+    font-family: 'Acme';
+    color: #ffffff;
     background: rgb(239,160,194);
     background: linear-gradient(90deg, rgba(239,160,194,1) 10%, rgba(199,128,188,1) 29%, rgba(177,85,193,1) 81%, rgba(121,175,219,1) 95%);
     padding: 20px 20px 20px 20px;
+    white-space: pre-line;
   }
+
+  @media screen and (max-width: 560px) {
+
+    .text-box-frame {
+      width: auto;
+      img {
+        width: 300px;
+        height: 300px;
+
+      }
+    }
+
+}
