--- a/frontend/src/styles/_boxText.scss
+++ b/frontend/src/styles/_boxText.scss
@@ -12,22 +12,23 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    object-fit: contain;
+ 
 
     img {
-      max-width: 100%;
-      height: 100%;
-     
+     width: 500px;
+      height: 450px;
+    
       border-radius: 20px; 
-
+     
     }
 
 
   }
 
   .large {
+    
     width: 500px;
-   
+    
     background: rgb(245,249,135);
     background: linear-gradient(90deg, rgba(245,249,135,1) 33%, rgba(231,156,12,1) 76%);
   }
@@ -66,6 +67,11 @@
         height: 300px;
 
       }
+
+    .carousel-container {
+
+      width: 300px;
+    }
     }
 
 }
