--- a/frontend/src/styles/_caroussel.scss
+++ b/frontend/src/styles/_caroussel.scss
@@ -44,3 +44,17 @@
     text-align: center;
     font-size: 14px;
   }
+
+  @media screen and (max-width: 560px) {
+
+    
+
+    .carousel {
+
+     width: 200px;
+     justify-content: center;
+      
+    }
+    
+
+}
