--- a/frontend/src/styles/_footer.scss
+++ b/frontend/src/styles/_footer.scss
@@ -1,20 +1,22 @@
 .footer {
-  background-color: #f4f4f4;
+  background-color: #333;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 10%;
+  
 }
 
 .contact-info {
-  width: 400px;
+  font-family: "Acme";
+
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  color: white;
 }
 
 .contact-column {
@@ -26,15 +28,28 @@
 }
 
 .social-links {
-  width: 400px;
+  
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
+ 
   
 }
 
 .social-links a {
+  font-family: "Acme";
   text-decoration: none;
-  color: #333;
+  color: white;
+}
+
+@media screen and (max-width: 650px) {
+
+.footer {
+
+  flex-direction: column;
+  align-items: center;
+
+}
+
 }
